Changelog
=========

2.1.3 (unreleased)
------------------

- Nothing changed yet.


2.1.2 (2013-01-02)
------------------

- Add 'available' property to portlet renderer [kagesenshi]


2.1.1 (2012-12-06)
------------------

- Fix unicode decode error for unicode chars in href title for default
  renderer [kaerumy]. 

  Supported by: Centre for Internet Society, India 


2.1.0 (2012-11-06)
------------------

- Added support for new style collection [kagesenshi]


2.0.2 (2012-03-26)
------------------

- Added way to assign custom widget [kagesenshi]


2.0.1 (2012-03-20)
------------------

- Fixed problem with installation of 2.0 due to missing README.rst [jone]


2.0 (2012-03-20)
----------------

* Added mechanism for additional views to extend the portlet schema [kagesenshi]
* Massive code cleanups [kagesenshi]
* CREDIT: changes above funded by cis-india.org

1.1.2 (2011-06-06)
------------------

* Plone 4.1 compat
  [aclark]

1.1.1 (2011-03-31)
------------------

* bugfix release. fixed a bug with the renderer selector using title as value 
   instead of id

1.1 (2011-03-27)
-----------------

* Plone4 compatibility
* Renderers now may have a human readable __name__ 
* Removed GalleryRenderer as it is broken anyway
* Hide unnecessary fields from the base Plone collection portlet.

1.0 (2010-12-19)
----------------

* fix permission used for portlet
  [vangheem]
  

0.1 (2009-12-31)
----------------

* Initial release