@@ -6,12 +6,6 @@ from zope import schema
 from collective.portlet.collectionmultiview.i18n import messageFactory as _
 
 class IDefaultSchema(Interface):
-    random = schema.Bool(
-        title=_(u"Select random items"),
-        description=_(u"If enabled, items will be selected randomly from the "
-                      u"collection, rather than based on its sort order."),
-        default=False)
-
     show_more = schema.Bool(
         title=_(u"Show more... link"),
         description=_(u"If enabled, a more... link will appear in the footer "
