@@ -4,7 +4,8 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- 'random' field should be in primary schema rather than on default 
+   renderer schema [kagesenshi]
 
 
 2.1.2 (2013-01-02)
